--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,16 @@
     "start": "tsnd --transpile-only --ignore-watch node-modules --respawn src/server.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
     "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
-    
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "express": "^4.17.1",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "knex": "^0.95.4",
     "sqlite3": "^5.0.2"
   }
